force-app/main/default/objects/Trainee_Group_Member__c/Trainee_Group_Member__c.object-meta.xml
<CustomObject>
    <label>Trainee Group Member</label>
    <nameField>
        <label>Member Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Trainee Group Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>