force-app/main/default/objects/Trainee_Group_Member__c/fields/Abandon_Reasons__c.field-meta.xml
<CustomField>
    <fullName>Abandon_Reasons__c</fullName>
    <label>Abandon Reasons</label>
    <type>TextArea</type>
</CustomField>