force-app/main/default/objects/Trainee_Group_Member__c/fields/Candidate__c.field-meta.xml
<CustomField>
    <fullName>Candidate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Candidate</label>
    <referenceTo>Candidate__c</referenceTo>
    <relationshipName>Training_Group_Members1</relationshipName>
    <type>Lookup</type>
</CustomField>