force-app/main/default/objects/Trainee_Group_Member__c/fields/Certification_Comments__c.field-meta.xml
<CustomField>
    <fullName>Certification_Comments__c</fullName>
    <label>Certification Comments</label>
    <type>TextArea</type>
</CustomField>