force-app/main/default/objects/Trainee_Group_Member__c/fields/Certification_Issued_Date__c.field-meta.xml
<CustomField>
    <fullName>Certification_Issued_Date__c</fullName>
    <label>Issued Date</label>
    <type>Date</type>
</CustomField>