force-app/main/default/objects/Trainee_Group_Member__c/fields/Certificatipn_Score__c.field-meta.xml
<CustomField>
    <fullName>Certificatipn_Score__c</fullName>
    <label>Score %</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>