force-app/main/default/objects/Trainee_Group_Member__c/fields/Completion_Comments__c.field-meta.xml
<CustomField>
    <fullName>Completion_Comments__c</fullName>
    <label>Completion Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>