force-app/main/default/objects/Trainee_Group_Member__c/fields/EAX_Evaluation_Score__c.field-meta.xml
<CustomField>
    <fullName>EAX_Evaluation_Score__c</fullName>
    <label>EAX Evaluation Score</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A1</fullName>
            </value>
            <value>
                <fullName>A2</fullName>
            </value>
            <value>
                <fullName>B1</fullName>
            </value>
            <value>
                <fullName>B2</fullName>
            </value>
            <value>
                <fullName>B2+</fullName>
            </value>
            <value>
                <fullName>C1</fullName>
            </value>
            <value>
                <fullName>C2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>