force-app/main/default/objects/Trainee_Group_Member__c/fields/FOF_Practice_Tests__c.field-meta.xml
<CustomField>
    <fullName>FOF_Practice_Tests__c</fullName>
    <label>FOF Practice  Tests</label>
    <length>80</length>
    <type>Text</type>
</CustomField>