force-app/main/default/objects/Trainee_Group_Member__c/fields/FOF_Progress__c.field-meta.xml
<CustomField>
    <fullName>FOF_Progress__c</fullName>
    <label>FOF Progress</label>
    <length>80</length>
    <type>Text</type>
</CustomField>