force-app/main/default/objects/Trainee_Group_Member__c/fields/FOF_User__c.field-meta.xml
<CustomField>
    <fullName>FOF_User__c</fullName>
    <label>FOF User</label>
    <length>20</length>
    <type>Text</type>
</CustomField>