force-app/main/default/objects/Trainee_Group_Member__c/fields/Mock_Comments__c.field-meta.xml
<CustomField>
    <fullName>Mock_Comments__c</fullName>
    <label>Mock Test Comments</label>
    <type>TextArea</type>
</CustomField>