force-app/main/default/objects/Trainee_Group_Member__c/fields/Mock_Status__c.field-meta.xml
<CustomField>
    <fullName>Mock_Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Passed</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>