force-app/main/default/objects/Trainee_Group_Member__c/fields/Points_English_Evaluation__c.field-meta.xml
<CustomField>
    <fullName>Points_English_Evaluation__c</fullName>
    <label>Points English Evaluation</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>