force-app/main/default/objects/Trainee_Group_Member__c/fields/Practice_Exams_Comments__c.field-meta.xml
<CustomField>
    <fullName>Practice_Exams_Comments__c</fullName>
    <label>Practice Exams Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>