force-app/main/default/objects/Trainee_Group_Member__c/fields/Progress_Notes__c.field-meta.xml
<CustomField>
    <fullName>Progress_Notes__c</fullName>
    <label>Progress Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>