force-app/main/default/objects/Trainee_Group_Member__c/fields/Removal_Reasons__c.field-meta.xml
<CustomField>
    <fullName>Removal_Reasons__c</fullName>
    <label>Removal Reasons</label>
    <type>TextArea</type>
</CustomField>