force-app/main/default/objects/Trainee_Group_Member__c/fields/Session_1__c.field-meta.xml
<CustomField>
    <fullName>Session_1__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Session 1</label>
    <type>Checkbox</type>
</CustomField>