force-app/main/default/objects/Trainee_Group_Member__c/fields/Session_2__c.field-meta.xml
<CustomField>
    <fullName>Session_2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Session 2</label>
    <type>Checkbox</type>
</CustomField>