force-app/main/default/objects/Trainee_Group_Member__c/fields/Session_3__c.field-meta.xml
<CustomField>
    <fullName>Session_3__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Session 3</label>
    <type>Checkbox</type>
</CustomField>