force-app/main/default/objects/Trainee_Group_Member__c/fields/Study_Guides_Comments__c.field-meta.xml
<CustomField>
    <fullName>Study_Guides_Comments__c</fullName>
    <label>Study Guides Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>