force-app/main/default/objects/Trainee_Group_Member__c/fields/Trailhead_Comments__c.field-meta.xml
<CustomField>
    <fullName>Trailhead_Comments__c</fullName>
    <label>Comments</label>
    <type>TextArea</type>
</CustomField>