force-app/main/default/objects/Trainee_Group_Member__c/fields/Trailhead_Progress__c.field-meta.xml
<CustomField>
    <fullName>Trailhead_Progress__c</fullName>
    <label>Trailhead Progress %</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>