force-app/main/default/objects/Trainee_Group_Member__c/fields/Trainee_Group__c.field-meta.xml
<CustomField>
    <fullName>Trainee_Group__c</fullName>
    <label>Trainee Group</label>
    <referenceTo>Trainee_Group__c</referenceTo>
    <relationshipLabel>Trainee Group Members</relationshipLabel>
    <relationshipName>Training_Group_Members1</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>