force-app/main/default/objects/Trainee_Group_Member__c/fields/Training_Progress__c.field-meta.xml
<CustomField>
    <fullName>Training_Progress__c</fullName>
    <label>Training Progress</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Trailhead</fullName>
                <default>true</default>
                <label>Trailhead</label>
            </value>
            <value>
                <fullName>Abandon</fullName>
            </value>
            <value>
                <fullName>Removed</fullName>
            </value>
            <value>
                <fullName>Study_Guides_FOF</fullName>
                <label>Study Guides FOF</label>
            </value>
            <value>
                <fullName>Practice Test FOF</fullName>
            </value>
            <value>
                <fullName>Mock Test</fullName>
            </value>
            <value>
                <fullName>Certification Exam</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>