force-app/main/default/objects/Trainee_Group_Member__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Candidate__c</columns>
    <columns>Training_Progress__c</columns>
    <columns>Points__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>